# TeaFiles

./: CMakeLists.txt  LICENSE  README.md
ex/: Analyze.cpp  Common.h  CreateTicks.cpp  Items.h  Sum.cpp
tf/: ContentSectionFormatter.cpp  ContentSectionFormatter.h  Description.h  Field.h  File.h  FileIO.cpp  FileIO.h  FormattedReader.cpp  FormattedReader.h  FormattedWriter.cpp  FormattedWriter.h  HeaderManager.cpp  HeaderManager.h  IO.cpp  IO.h  ItemCollection.ipp  ItemDescription.cpp  ItemDescription.h  ItemSectionFormatter.cpp  ItemSectionFormatter.h  MemoryAccess.h  NameValueSectionFormatter.cpp  NameValueSectionFormatter.h  ReadContext.cpp  ReadContext.h  SectionFormatter.h  Streams.cpp  Streams.h  TeaFile.h  TeaFile.ipp  TeaFileCore.cpp  TeaFileCore.h  TeaFileDescription.h  TextUtils.cpp  Time.h  TimeScale.h  TimeSectionFormatter.cpp  TimeSectionFormatter.h  WinUtils.cpp  WriteContext.cpp  (+1 more)
